<?xml version="1.0" encoding="utf-8"?>
<resources>

    <!-- Application Name -->
    <string name="app_name">AhorcadOS</string>

    <!-- Best Records Activity -->
    <string name="best_records_text_progress_dialog">Espere mientras los Mejores Records se descargan desde el Servidor&#8230;</string>
    <string name="best_records_title_progress_dialog">Consultado Records</string>
    <string name="best_records_activity_name">Mejores Records</string>
    <string name="date_text">Fecha:</string>
    <string name="no_best_records_found_text_view">No \"Mejores Records\" Encontrados.</string>
    <string name="record_text">Record:</string>
    <string name="user_name_text">Usuario:</string>
    <string name="word_text">Palabra:</string>

    <!-- Categories Dashboard Activity -->
    <string-array name="last_record_wont_text_alert_dialog">
        <item>Categoría:</item>
        <item>Fecha:</item>
        <item>Puntos:</item>
        <item>Palabra:</item>
    </string-array>

    <string name="dashboard_activity_name">Categorías</string>
    <string name="no_categories_found_text_alert_dialog">No se pudieron obtener o no hay Categorías disponibles.\nLa aplicación se cerrará.</string>
    <string name="no_categories_found_title_alert_dialog">Sin Categorías</string>
    <string name="no_last_record_wont_found_text_alert_dialog">No se ha encontrado ningún Último Record.</string>
    <string name="last_record_wont_title_alert_dialog">Último Record</string>
    <string name="leave_dashboard_text_alert_dialog">Esta acción cerrará la aplicación.\n¿Está seguro de continuar?</string>
    <string name="leave_dashboard_title_alert_dialog">¿Cerrar Aplicación?</string>
    <string name="player_title_text_view">Jugador:</string>
    <string name="show_all_records">Ver mejores Records</string>
    <string name="show_last_record">Ver mi último Record</string>

    <!-- Error Utilities -->
    <string name="server_error_text">El servidor no está accesible.\nLa aplicación se cerrará.</string>
    <string name="server_error_title">Error En El Servidor</string>

    <!-- Game Board Activity -->
    <string name="category_words_error_text_alert_dialog">Palabra No Encontrada</string>
    <string name="category_words_error_title_alert_dialog">No se ha podido encontrar una Palabra para esta Categoría.\nPor favor, intente de nuevo.</string>
    <string name="find_category_words_text_progress_dialog">Espere mientras se busca y se carga una Palabra.</string>
    <string name="find_category_words_title_progress_dialog">Buscando Palabra&#8230;</string>
    <string name="leave_game_text_alert_dialog">Esta acción cerrará el juego actual.\n¿Está seguro de continuar?</string>
    <string name="leave_game_title_alert_dialog">¿Finalizar Juego?</string>
    <string name="hanging_image_view_description">Progreso del Ahorcamiento</string>
    <string name="score_title_text">Record:</string>
    <string name="timer_title_text">Tiempo:</string>

    <!-- Game Final Activity -->
    <string name="final_result_lost">HAS PERDIDO&#8230;!!</string>
    <string name="final_result_won">¡¡ HAS GANADO !!</string>
    <string name="play_again_button_text">Jugar De Nuevo</string>
    <string name="error_saving_record_text_alert_dialog">No se ha podido guardar su Record exitosamente.</string>
    <string name="error_saving_record_title_alert_dialog">Error Al Guardar</string>
    <string name="saving_record_text_progress_dialog">Espere mientras se guarda el Record&#8230; en el Servidor.</string>
    <string name="saving_record_title_progress_dialog">Guardando Record</string>

    <!-- Glogal Utilies -->
    <string name="cancel">Cancelar</string>
    <string name="accept">Aceptar</string>

    <!-- Login Activity -->
    <string name="create_account_button">Crear Cuenta</string>
    <string name="login_button">Iniciar Sesión</string>
    <string name="logo_text_view_description">Logo principal de la aplicación.</string>
    <string name="password_hint_edit_text">******</string>
    <string name="password_text_view">Contraseña:</string>
    <string name="login_text_progress_dialog">Conectando al Servidor&#8230;</string>
    <string name="login_title_progress_dialog">Iniciando Sesión</string>
    <string name="user_error_text_alert_dialog">El "Nombre De Usuario" o "Contraseña" son incorrectos.</string>
    <string name="user_error_title_alert_dialog">Jugador No Encontrado</string>
    <string name="user_name_hint_edit_text">Usuario</string>
    <string name="user_name_text_view">Nombre De Usuario:</string>

</resources>