<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".LoginActivity" >

    <TableRow
        android:layout_width="fill_parent"
        android:gravity="center_horizontal" >

        <TextView
            android:id="@+id/user_name_text_view"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="35dp"
            android:layout_span="2"
            android:gravity="center_horizontal"
            android:text="@string/user_name_text_view"
            android:textAppearance="?android:attr/textAppearanceMedium" >
        </TextView>
    </TableRow>

    <TableRow
        android:layout_width="fill_parent"
        android:gravity="center_horizontal" >

        <EditText
            android:id="@+id/user_name_edit_text"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="13dp"
            android:layout_span="2"
            android:ems="10"
            android:gravity="center_vertical|center_horizontal"
            android:hint="@string/user_name_hint_edit_text" >
        </EditText>
    </TableRow>

    <TableRow
        android:layout_width="fill_parent"
        android:gravity="center_horizontal" >

        <TextView
            android:id="@+id/password_text_view"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="45dp"
            android:layout_span="2"
            android:gravity="center_horizontal"
            android:text="@string/password_text_view"
            android:textAppearance="?android:attr/textAppearanceMedium" >
        </TextView>
    </TableRow>

    <TableRow
        android:layout_width="fill_parent"
        android:gravity="center_horizontal" >

        <EditText
            android:id="@+id/password_edit_text"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="13dp"
            android:layout_span="2"
            android:ems="10"
            android:gravity="center_vertical|center_horizontal"
            android:hint="@string/password_hint_edit_text"
            android:inputType="textPassword" >
        </EditText>
    </TableRow>

    <TableRow
        android:layout_width="fill_parent"
        android:layout_marginTop="25dp"
        android:gravity="center_horizontal" >

        <Button
            android:id="@+id/login_button"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:onClick="onLogin"
            android:text="@string/login_button" >
        </Button>

        <Button
            android:id="@+id/create_account_button"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:enabled="false"
            android:onClick="onCreateAccount"
            android:text="@string/create_account_button" >
        </Button>
    </TableRow>

</TableLayout>