<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/background_app"
    android:gravity="center"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:weightSum="7"
    tools:context=".activities.login.LoginActivity" >

    <ImageView
        android:id="@+id/logo_image_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/logo_image_view_description"
        android:src="@drawable/ic_logo" >
    </ImageView>

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center"
        android:text="@string/user_name_text_view"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="@color/user_name_text_color"
        android:textStyle="bold" >
    </TextView>

    <EditText
        android:id="@+id/user_name_edit_text"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:ems="@integer/user_name_edit_text_ems"
        android:gravity="center"
        android:hint="@string/user_name_hint_edit_text"
        android:singleLine="true" >
    </EditText>

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center"
        android:text="@string/password_text_view"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="@color/password_text_color"
        android:textStyle="bold" >
    </TextView>

    <EditText
        android:id="@+id/password_edit_text"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:ems="@integer/password_edit_text_ems"
        android:gravity="center"
        android:hint="@string/password_hint_edit_text"
        android:inputType="textPassword"
        android:nextFocusDown="@+id/login_button" >
    </EditText>

    <Button
        android:id="@+id/login_button"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:onClick="onLogin"
        android:text="@string/login_button" >
    </Button>

</LinearLayout>