<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    tools:context=".activities.bestrecords.BestRecordsActivity" >

    <TableRow
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/user_name_table_row_margin_top"
        android:weightSum="1" >

        <TextView
            android:id="@+id/category_name_text_view"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/category_name_text_view_margin_left"
            android:layout_span="2"
            android:layout_weight="1"
            android:text="@string/best_records_activity_name"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@color/category_name_text_color"
            android:textStyle="bold" >
        </TextView>
    </TableRow>

    <!-- TableRow for details' Record / Part 1 -->

    <TableRow
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/record_details_table_row_maring_left"
        android:layout_marginTop="@dimen/record_details_table_row_maring_top"
        android:gravity="center"
        android:weightSum="3" >

        <TextView
            android:id="@+id/player_user_name_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:text="@string/user_name_text"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textColor="@color/player_user_name_text_color" >
        </TextView>

        <TextView
            android:id="@+id/record_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/record_text"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textColor="@color/record_text_color" >
        </TextView>
    </TableRow>

    <!-- TableRow for details' Record / Part 2 -->

    <TableRow
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/record_details_table_row_maring_left"
        android:layout_marginTop="@dimen/record_details_table_row_maring_top"
        android:gravity="center"
        android:weightSum="3" >

        <TextView
            android:id="@+id/record_word_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:text="@string/word_text"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textColor="@color/record_word_text_color" >
        </TextView>

        <TextView
            android:id="@+id/record_date_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/date_text"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textColor="@color/record_date_text_color" >
        </TextView>
    </TableRow>

</TableLayout>