<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/background_app"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:weightSum="6"
    tools:context=".activities.game.GameBoardActitivy" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="4" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="right"
            android:text="@string/timer_title_text"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@color/chronometer_title_text_color"
            android:textStyle="bold" >
        </TextView>

        <Chronometer
            android:id="@+id/chronometer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/chronometer_margin_left"
            android:layout_weight="1"
            android:textColor="@color/chronometer_text_color" >
        </Chronometer>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="right"
            android:text="@string/bonus_title_text"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@color/score_title_text_color"
            android:textStyle="bold" >
        </TextView>

        <TextView
            android:id="@+id/bonus_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/score_margin_left"
            android:layout_weight="1"
            android:text="@integer/initial_bonus_points"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@color/score_text_color" >
        </TextView>
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" >

        <ImageView
            android:id="@+id/hanging_progress_image_view"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:contentDescription="@string/hanging_image_view_description"
            android:src="@drawable/ic_hanging_state_starting" >
        </ImageView>
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/hidden_word_text_view"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/table_row_image_view_margin_bottom"
            android:gravity="center"
            android:text="@string/app_name"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="@color/hidden_word_text_color"
            android:textScaleX="1.4"
            android:textStyle="bold" >
        </TextView>
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" >

        <include layout="@layout/keyboard_game" ></include>
    </LinearLayout>

</LinearLayout>